# Green-Stake

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx  template.tsx
app/api/submit-claim/: route.ts
app/api/upload-photo/: route.ts
app/claim/[id]/: page.tsx
app/dashboard/: page.tsx
app/how-it-works/: page.tsx
app/submit/: page.tsx
app/why-stellar/: page.tsx
components/: ClaimCard.tsx  ClaimPendingClient.tsx  ClaimPhotoFrame.tsx  DashboardClient.tsx  Footer.tsx  ForestHero.tsx  Nav.tsx  Reveal.tsx  StatCounter.tsx  StatusBadge.tsx  SubmitForm.tsx  TreeGrowth.tsx  WalletProvider.tsx
contract/: Cargo.toml  deploy.sh
contract/src/: lib.rs
lib/: claims.ts  pending-claims.ts  pinata.ts  stellar-wallets-kit.ts
script/: deploy.sh
tests/: lib.test.ts
